# spellbook

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_deploy.sh  build_config.sh  build_config_release.sh  build_utils.py  clean_deps.py  deliver_resources.sh  deploy.sh  deploy_cpp_generator.sh  deps_config.sh  deps_scenario.sh  external_config.sh  get_dependencies.sh  log.sh  release_notes_v0.1.txt  spellbook.json  sync_sb.sh
Spellbook/: CMakeLists.txt
Spellbook/include/: Spellbook.h  spell.h  spell_context.h  spell_expression.h  spell_factory.h  spell_fwd.h  spell_options.h  spell_parser.h
Spellbook/include/spells/: add_script_link_spell.h  add_spell_spell.h  list_spell.h  python_spell.h  script_link_spell.h  script_spell.h  shell_spell.h
Spellbook/src/: Spellbook.cpp  spell.cpp  spell_context.cpp  spell_expression.cpp  spell_factory.cpp  spell_options.cpp  spell_parser.cpp
Spellbook/src/spells/: add_script_link_spell.cpp  add_spell_spell.cpp  list_spell.cpp  python_spell.cpp  script_link_spell.cpp  script_spell.cpp  shell_spell.cpp
resources/: spellbook.json
